--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "main": "build/cg.js",
     "dependencies": {
       "css": "github:systemjs/plugin-css@^0.1.22",
-      "d3": "npm:d3@4.0.0-alpha.44"
+      "d3": "npm:d3@^4.0.0"
     },
     "devDependencies": {
       "plugin-babel": "npm:systemjs-plugin-babel@^0.0.11"
