--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
   "name": "cg-core",
-  "version": "0.7.0",
+  "version": "0.7.2",
   "description": "",
-  "main": "build/cg-core.js",
-  "jsnext:main": "index",
+  "main": "index.js",
+  "module": "index.js",
+  "jsnext:main": "index.js",
   "private": true,
   "jspmPackage": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "jspm build cg-core - d3 - css build/cg-core.js --format umd  --skip-rollup --dev",
+    "dist": "jspm build cg-core - d3 - css build/cg-core.js --format umd ",
+    "d3": "rm -rf build && mkdir build && json2module package.json > build/package.js && rollup -f umd -n cg-core -o build/cg-core.js -- index.js"
+  },
+  "author": "Yarden Livnat",
+  "license": "MIT",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-if": "^2.0.1",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-newer": "^1.1.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "jspm": "^0.17.0-beta.32"
+  },
+  "dependencies": {},
   "jspm": {
     "name": "cg-core",
-    "main": "build/cg-core.js",
+    "main": "index.js",
     "dependencies": {
-      "css": "github:systemjs/plugin-css@^0.1.22",
-      "d3": "npm:d3@^4.0.0"
+      "d3": "npm:d3@^4.7.3"
     },
     "devDependencies": {
-      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.11"
+      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.21"
     },
     "peerDependencies": {
       "assert": "npm:jspm-nodelibs-assert@^0.2.0",
@@ -42,28 +63,5 @@
         ]
       }
     }
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "jspm build cg-core - d3 - css build/cg-core.js --format umd  --skip-rollup --dev",
-    "dist": "jspm build cg-core - d3 - css build/cg-core.js --format umd ",
-    "d3": "rm -rf build && mkdir build && json2module package.json > build/package.js && rollup -f umd -n cg-core -o build/cg-core.js -- index.js"
-  },
-  "author": "Yarden Livnat",
-  "license": "MIT",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-newer": "^1.1.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "jspm": "^0.17.0-beta.21"
-  },
-  "dependencies": {
-    "jspm": "^0.17.0-beta.31"
   }
 }
