--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
-    "jspm": "^0.17.0-beta.32"
+    "jspm": "0.17.0-beta.32"
   },
   "dependencies": {},
   "jspm": {
